# notifications

./: .gitignore  README.md  meson.build
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/ISSUE_TEMPLATES/: config.yml
.github/workflows/: gettext.yml  main.yml  release.yml
data/: SettingsOption.css  application.css  autostart.desktop  meson.build  notifications.appdata.xml.in  notifications.desktop.in  notifications.gresource.xml  notifications.gschema.xml  notifications.metainfo.xml.in  plug.gresource.xml
debian/: changelog  control  copyright
demo/: Application.vala  MainWindow.vala  io.elementary.notifications.demo.desktop  meson.build
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  av.po  ay.po  ba.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  (+144 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
protocol/: meson.build
src/: AbstractBubble.vala  Application.vala  Bubble.vala  ButtonsContainer.vala  CanberraGtk4.vala  Confirmation.vala  DBus.vala  FdoActionGroup.vala  IdleMonitor.vala  ImageData.vala  MainWindow.vala  Notification.vala  Plug.vala  PortalProxy.vala  meson.build
src/Backend/: App.vala  NotifyManager.vala
src/Widgets/: AppEntry.vala  AppSettingsView.vala  MainView.vala  MaskedImage.vala  SettingsOption.vala  Sidebar.vala
